sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:30: error: illegal start of simple expression
  } 
  ^